# ResizeMySvg

./: Cargo.toml  Dockerfile  build.rs  readme.md
src/: main.rs
