[package]
name = "freya-template"
version = "0.1.0"
edition = "2021"

[dependencies]
freya = "0.2"
dioxus = { version = "0.5", default-features = false, features = ["macro", "hooks"] }
tokio = { version = "1.40.0", features = ["fs"] }
bytes = "1.7.1"
native-dialog = { version = "0.7.0", features = ["windows_dpi_awareness", "windows_visual_styles"] }
